--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.2"
